# itmo-spo-2024

./: .gitignore  CMakeLists.txt  README.md  Report-1.md  T.tokens  V4.tokens  cmdline-args.txt  run.sh  useful-commands.txt
Lab-1/: CMakeLists.txt  Var4.g  Var4Lexer.c  Var4Lexer.h  Var4Parser.c  Var4Parser.h  test.txt
Lab-1/src/: Sigma.g  Sigma.tokens  SigmaLexer.c  SigmaLexer.h  SigmaParser.c  SigmaParser.h  Treebuilder.c  Treebuilder.h  for2.txt  main.c  tree.dot
Lab-2/: CMakeLists.txt  README-2.md  Sigma.g  Var4.g  test.txt
Lab-2/include/: AST.h  CFG.h  CFGBuilder.h  CFGNodeProcessing.h  CG.h  ProcessedNodes.h  SigmaLexer.h  SigmaParser.h  TreeBuilder.h
Lab-2/input/: prog-1.txt  prog-2.txt
Lab-2/output/prog-1/: main-cfg.dot  prog-1-cg.dot  prog-1.dot  repeatCallExample-cfg.dot  sum-cfg.dot
Lab-2/output/prog-2/: alpha-cfg.dot  bar-cfg.dot  baz-cfg.dot  beta-cfg.dot  foo-cfg.dot  gamma-cfg.dot  main-cfg.dot  prog-2-cg.dot  prog-2.dot  theta-cfg.dot  tree.dot
Lab-2/src/: .test.txt.kate-swp  AST.c  AST.h  BasicBlock.c  BasicBlock.h  CFG.c  CFG.h  CFGBuilder.c  CFGBuilder.h  CFGNodeProcessing.c  CFGNodeProcessing.h  CG.c  CG.h  CallTree.h  ExitStack.c  ExitStack.h  Functions.c  Functions.h  HashTree.c  HashTree.h  InputOptions.c  InputOptions.h  LevelStack.c  LevelStack.h  OpTree.c  OpTree.cpp  OpTree.h  ProcessedNodes.c  ProcessedNodes.h  SigmaLexer.c  SigmaLexer.h  SigmaParser.c  SigmaParser.h  TreeBuilder.c  Treebuilder.h  cfg-builder.h  cfg.dot  macro.h  main.c  test.txt  (+1 more)
arch/: arch-popov-v24.target.pdsl
cmake/: create_executable.cmake  create_library.cmake
examples/: CMakeLists.txt
examples/asm-gen/: CMakeLists.txt  listing.txt  main.c
examples/cfg-builder/: CMakeLists.txt  main.c
examples/compiler/: CMakeLists.txt  main.c
examples/tree-vis/: CMakeLists.txt  main.c
examples/tree-vis/input/: sample1.txt
examples/tree-vis/output/: sample1-out.dot  sample1.dot
include/asm-gen-lib/: AG.h  AS.h  ASMGen.h
include/cfg-builder-lib/: AST.h  CFG.h  CFGBuilder.h  CFGNodeProcessing.h  CFGOutput.h  CFGWalker.h  CG.h  Functions.h  InputOptions.h  LevelStack.h  OT.h  OTOutput.h  ST.h  newCFG.h
include/io-utils/: commands.h
include/safe-mem/: safe_mem.h
include/tree-vis-lib/: AST.h  ASTOutput.h  TreeBuilder.h
reports/: Report-1.md
samples/input/: sample1.txt
samples/output/: sample1.dot
samples/output/sample1/: alpha-cfg.dot  main-cfg.dot  sample1-cg.dot  sample1.dot
scripts/: assemble-pull-debug.py
scripts/utils/: run_command.py
src/: CMakeLists.txt  T.g  T.tokens  TLexer.c  TLexer.h  TParser.c  TParser.h  Treebuilder.c  Treebuilder.h  Var4.g  Var4.tokens  Var4Lexer.c  Var4Lexer.h  Var4Parser.c  Var4Parser.h  Var4Prev.g  Var4Prev.tokens  Var4PrevLexer.c  Var4PrevLexer.h  Var4PrevParser.c  Var4PrevParser.h  main.c  test.txt  tree.dot
src/asm-gen-lib/: AG.c  AS.c  ASMGen.c  CMakeLists.txt
src/cfg-builder-lib/: AST.c  CFG.c  CFGBuilder.c  CFGNodeProcessing.c  CFGOutput.c  CFGWalker.c  CG.c  CMakeLists.txt  Functions.c  InputOptions.c  LevelStack.c  OT.c  OTOutput.c  ProcessedNodes.c  ST.c  newCFG.c
src/grammar/: CMakeLists.txt  V4.g  V4Lexer.c  V4Lexer.h  V4Parser.c  V4Parser.h
src/io-utils/: CMakeLists.txt  commands.c
src/safe-mem/: CMakeLists.txt  safe_mem.c
src/tree-vis-lib/: AST.c  ASTOutput.c  CMakeLists.txt  TreeBuilder.c
